--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular2-webpack-starter",
-  "version": "5.0.5",
-  "description": "An Angular 2 Webpack Starter kit featuring Angular 2 (Router, Http, Forms, Services, Tests, E2E, Coverage), Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack by AngularClass",
+  "name": "Personal Homepage",
+  "version": "1.0.0",
+  "description": "Case study by using angular 2 web starter",
   "keywords": [
     "angular2",
     "webpack",
@@ -11,69 +11,53 @@
   "homepage": "https://github.com/angularclass/angular2-webpack-starter",
   "license": "MIT",
   "scripts": {
-     "rimraf": "rimraf",
-     "tslint": "tslint",
-     "typedoc": "typedoc",
-     "typings": "typings",
-     "webpack": "webpack",
-     "webpack-dev-server": "webpack-dev-server",
-     "webdriver-manager": "webdriver-manager",
-     "protractor": "protractor",
-
-     "typings-install": "npm run typings -- install",
-
-     "clean": "npm cache clean && npm run rimraf -- node_modules doc typings coverage dist",
-       "clean:dist": "npm run rimraf -- dist",
-         "preclean:install": "npm run clean",
-       "clean:install": "npm set progress=false && npm install",
-         "preclean:start": "npm run clean",
-       "clean:start": "npm start",
-
-     "watch": "npm run watch:dev",
-       "watch:dev": "npm run build:dev -- --watch",
-       "watch:dev:hmr": "npm run watch:dev -- --hot",
-       "watch:test": "npm run test -- --auto-watch --no-single-run",
-       "watch:prod": "npm run build:prod -- --watch",
-
-     "build": "npm run build:dev",
-         "prebuild:dev": "npm run clean:dist",
-       "build:dev": "webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached",
-         "prebuild:prod": "npm run clean:dist",
-       "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --colors --display-error-details --display-cached --bail",
-
+    "rimraf": "rimraf",
+    "tslint": "tslint",
+    "typedoc": "typedoc",
+    "typings": "typings",
+    "webpack": "webpack",
+    "webpack-dev-server": "webpack-dev-server",
+    "webdriver-manager": "webdriver-manager",
+    "protractor": "protractor",
+    "typings-install": "npm run typings -- install",
+    "clean": "npm cache clean && npm run rimraf -- node_modules doc typings coverage dist",
+    "clean:dist": "npm run rimraf -- dist",
+    "preclean:install": "npm run clean",
+    "clean:install": "npm set progress=false && npm install",
+    "preclean:start": "npm run clean",
+    "clean:start": "npm start",
+    "watch": "npm run watch:dev",
+    "watch:dev": "npm run build:dev -- --watch",
+    "watch:dev:hmr": "npm run watch:dev -- --hot",
+    "watch:test": "npm run test -- --auto-watch --no-single-run",
+    "watch:prod": "npm run build:prod -- --watch",
+    "build": "npm run build:dev",
+    "prebuild:dev": "npm run clean:dist",
+    "build:dev": "webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached",
+    "prebuild:prod": "npm run clean:dist",
+    "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --colors --display-error-details --display-cached --bail",
     "github-deploy": "npm run build:prod && npm run github-deploy:dev",
-      "github-deploy:dev": "git subtree push --prefix dist origin gh-pages",
-
+    "github-deploy:dev": "git subtree push --prefix dist origin gh-pages",
     "server": "npm run server:dev",
-       "server:dev": "webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --content-base src/",
-       "server:dev:hmr": "npm run server:dev -- --hot",
-       "server:prod": "http-server dist --cors",
-
-     "webdriver:update": "npm run webdriver-manager update",
-     "webdriver:start": "npm run webdriver-manager start",
-
-     "lint": "npm run tslint \"src/**/*.ts\"",
-
-       "pree2e": "npm run webdriver:update -- --standalone",
-     "e2e": "npm run protractor",
-       "e2e:live": "npm run e2e -- --elementExplorer",
-
-     "test": "karma start",
-
-     "ci": "npm run lint && npm test && npm run e2e",
-
-     "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
-
-     "start": "npm run server:dev",
-       "start:hmr": "npm run server:dev:hmr",
-
-     "postinstall": "npm run typings-install",
-
-       "preversion": "npm test",
-     "version": "npm run build",
-       "postversion": "git push && git push --tags"
-
-   },
+    "server:dev": "webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --content-base src/",
+    "server:dev:hmr": "npm run server:dev -- --hot",
+    "server:prod": "http-server dist --cors",
+    "webdriver:update": "npm run webdriver-manager update",
+    "webdriver:start": "npm run webdriver-manager start",
+    "lint": "npm run tslint \"src/**/*.ts\"",
+    "pree2e": "npm run webdriver:update -- --standalone",
+    "e2e": "npm run protractor",
+    "e2e:live": "npm run e2e -- --elementExplorer",
+    "test": "karma start",
+    "ci": "npm run lint && npm test && npm run e2e",
+    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
+    "start": "npm run server:dev",
+    "start:hmr": "npm run server:dev:hmr",
+    "postinstall": "npm run typings-install",
+    "preversion": "npm test",
+    "version": "npm run build",
+    "postversion": "git push && git push --tags"
+  },
   "dependencies": {
     "@angular/http": "2.0.0-rc.4",
     "@angular/common": "2.0.0-rc.4",
@@ -87,9 +71,9 @@
     "@angular2-material/button": "2.0.0-alpha.6",
     "@angular2-material/card": "2.0.0-alpha.6",
     "@angular2-material/checkbox": "2.0.0-alpha.6",
+    "@angular2-material/core": "2.0.0-alpha.6",
     "@angular2-material/grid-list": "2.0.0-alpha.6",
     "@angular2-material/icon": "2.0.0-alpha.6",
-    "@angular2-material/core": "2.0.0-alpha.6",
     "@angular2-material/input": "2.0.0-alpha.6",
     "@angular2-material/list": "2.0.0-alpha.6",
     "@angular2-material/progress-bar": "2.0.0-alpha.6",
@@ -99,24 +83,30 @@
     "@angular2-material/slide-toggle": "2.0.0-alpha.6",
     "@angular2-material/tabs": "2.0.0-alpha.6",
     "@angular2-material/toolbar": "2.0.0-alpha.6",
-
-    "@angularclass/webpack-toolkit": "^1.3.3",
     "@angularclass/request-idle-callback": "^1.0.7",
-
-    "ie-shim": "^0.1.0",
+    "@angularclass/webpack-toolkit": "^1.3.3",
     "core-js": "^2.4.0",
+    "http-server": "^0.9.0",
+    "ie-shim": "^0.1.0",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "~0.6.12",
-
-    "http-server": "^0.9.0"
+    "zone.js": "~0.6.12"
   },
   "devDependencies": {
-
     "angular2-hmr": "~0.8.0",
+    "angular2-template-loader": "^0.4.0",
+    "awesome-typescript-loader": "1.1.1",
+    "codelyzer": "~0.0.21",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.23.1",
+    "es6-promise-loader": "^1.0.1",
+    "exports-loader": "^0.6.3",
+    "expose-loader": "^0.7.1",
+    "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
-    "parse5": "^1.5.1",
-    "rimraf": "^2.5.2",
-
+    "html-webpack-plugin": "^2.21.0",
+    "imports-loader": "^0.6.5",
+    "istanbul-instrumenter-loader": "^0.2.0",
+    "json-loader": "^0.5.4",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
@@ -124,40 +114,24 @@
     "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.7.0",
-
-    "remap-istanbul": "^0.6.3",
-
+    "node-sass": "^3.8.0",
+    "parse5": "^1.5.1",
     "protractor": "^3.2.2",
-
-    "codelyzer": "~0.0.21",
-
-    "tslint": "^3.7.1",
+    "raw-loader": "^0.5.1",
+    "remap-istanbul": "^0.6.3",
+    "rimraf": "^2.5.2",
+    "sass-loader": "^4.0.0",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
+    "to-string-loader": "^1.1.4",
     "ts-helpers": "1.1.1",
     "ts-node": "^0.9.1",
+    "tslint": "^3.7.1",
+    "tslint-loader": "^2.1.3",
     "typedoc": "^0.4.4",
     "typescript": "~1.8.10",
     "typings": "~1.3.0",
-
-    "awesome-typescript-loader": "1.1.1",
-    "angular2-template-loader": "^0.4.0",
-    "tslint-loader": "^2.1.3",
     "url-loader": "^0.5.7",
-    "style-loader": "^0.13.1",
-    "raw-loader": "0.5.1",
-    "source-map-loader": "^0.1.5",
-    "imports-loader": "^0.6.5",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "json-loader": "^0.5.4",
-    "es6-promise-loader": "^1.0.1",
-    "css-loader": "^0.23.1",
-    "exports-loader": "^0.6.3",
-    "expose-loader": "^0.7.1",
-    "file-loader": "^0.9.0",
-    "to-string-loader": "^1.1.4",
-
-    "html-webpack-plugin": "^2.21.0",
-    "copy-webpack-plugin": "^3.0.1",
-
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-md5-hash": "^0.0.5",
