add scss support

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Personal Homepage",
+  "name": "lucamele.ch",
   "version": "1.0.0",
   "description": "Case study by using angular 2 web starter",
   "keywords": [
